tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/virtualservice/set_authority_header/a/to_b/_test_context/VirtualService.3648660536.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-20468
spec:
  hosts:
  - b
  http:
  - headers:
      request:
        set:
          :authority: my-custom-authority
    route:
    - destination:
        host: b
